replacment testing